<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/main_header"
        android:layout_width="match_parent"
        android:gravity="center"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_marginBottom="@dimen/title_bottom"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_spotify_streamer"
        style="@style/myCustomButtom"
        android:text="@string/spotify_streamer"
        />

    <Button
        android:id="@+id/btn_scores_app"
        style="@style/myCustomButtom"
        android:text="@string/scores_app"
        />

    <Button
        android:id="@+id/btn_library_app"
        style="@style/myCustomButtom"
        android:text="@string/library_app"
        />

    <Button
        android:id="@+id/btn_build_it_bigger"
        style="@style/myCustomButtom"
        android:text="@string/build_it_bigger"
        />

    <Button
        android:id="@+id/btn_xyz_reader"
        style="@style/myCustomButtom"
        android:text="@string/xyz_reader"
        />

    <Button
        android:id="@+id/btn_capstone"
        style="@style/myCustomButtom"
        android:text="@string/capstone"
        android:background="@color/pink"
        />


</LinearLayout>
